# wwand

./: .gitignore  CLAUDE.md  README.md
docs/: STATUS.md  architecture.md  backend-interface.md  extending.md  reference.md  telemetry-survey.md
files/: wwand-migrate  wwand-proto.sh  wwand.config  wwand.defaults  wwand.init
io/src/: wwand-io.c
luci-app-wwand/: Makefile
luci-proto-wwand/: Makefile  README.md
src-ucode/: atcmd.uc  atport.uc  backend.uc  board.uc  client.uc  config.uc  context.uc  context_common.uc  context_mbim.uc  context_ncm.uc  daemon.uc  discovery.uc  esim_bridge.uc  main.uc  mbim_backend.uc  mbim_lazy.uc  modem.uc  modem_common.uc  modem_mbim.uc  modem_ncm.uc  modem_quirks.uc  modeswitch.uc  netlink.uc  qmi_lazy.uc  recovery.uc  sim.uc  ubus.uc
src-ucode/codec/: mbim.uc
tests/: qmid  run_tests.sh  test_board.uc  test_callend.uc  test_client.uc  test_config.uc  test_context.uc  test_context_common.uc  test_context_mbim.uc  test_daemon.uc  test_datapath.uc  test_discovery.uc  test_esim.uc  test_mbim.uc  test_mbim_backend.uc  test_modem.uc  test_modem_common.uc  test_modem_mbim.uc  test_ncm.uc  test_netsel.uc  test_protoswitch.uc  test_qmi_backend.uc  test_recovery.uc  test_ubus.uc
tests/lib/: fakefx.uc  mockhub.uc
tools/: gen-atport-table.py
ucode-mod-wwand-io/: Makefile
ucode-mod-wwand-io/src/: wwand-io.c
wwand/: Makefile  README.md
wwand-lpac/: Makefile
wwand-lpac/files/: lpac.sh
wwand-lpac/patches/: 110-stdio-apdu-request-check.patch
wwand/files/: wwand-context-monitor  wwand-esim-download  (+5 more)
wwand/io/: CMakeLists.txt
(+75 files in other folders)
